# socassess

./: .gitignore  CHANGELOG.md  CNAME  README.md  pyproject.toml
.github/workflows/: docs.yaml  poetry-package.yml  publish.yaml  tests.yaml
docs/: book.toml
docs/src/: SUMMARY.md  ai_feedback.md  assessments.md  basic_use_of_socassess.md  chapter_1.md  configure_email.md  feedback.md  inside_socassess.md  introduction.md  missing_dependencies.md  more_accuracy.md  non_automated_feedback.md  parametrized_test.md  practice_collection.md  raw_test_case_outcomes.md  test_case_context.md  test_context.md  unexpected_failures.md  unit_testing_framework.md  use_chatgpt.md  use_socassess.md
docs/src/snippets/: test_mode.py
docs/src/snippets/inside_socassess/: pyproject.toml
docs/src/snippets/inside_socassess/inside_socassess/: socassess.toml
docs/src/snippets/inside_socassess/inside_socassess/artifacts/: report.xml  test_case_context.txt
docs/src/snippets/inside_socassess/inside_socassess/maps/: __init__.py  mapping.py
docs/src/snippets/inside_socassess/inside_socassess/probing_tests/: conftest.py  test_it.py
docs/src/snippets/inside_socassess/inside_socassess/stu/: student.txt
examples/a1/: README.md  pyproject.toml
examples/a1/a1/: socassess.toml
examples/a1/a1/maps/: __init__.py  mapping.py
examples/a1/a1/probing_tests/: conftest.py  pytest.ini  test_it.py
examples/a1/tests/: conftest.py  pytest.ini  test_auto.py
examples/a1/tests/data/recorded_feedback/: 1.txt.md
examples/a1/tests/data/representative_answers/: 1.txt
src/socassess/: feedback.py
(+24 files in other folders)
